# bevynator

./: Cargo.toml  README.md
assets/: bg1.pxo  bg1.xcf  bullet_explosion.pxo  enemy_bullet1.pxo  enemy_ship_1.pxo  enemy_ship_2.pxo  game_over.xcf  ship1.pxo  status_bar.pxo  title.xcf  trail.pxo
assets/powerups/: bullet_speed.pxo  dash_speed.pxo  dash_up.pxo  fire_rate.pxo  health.pxo  max_health.pxo
assets/sounds/: Explosion.bfxrsound  Hit_Hurt16.bfxrsound  Laser_Shoot.bfxrsound  Powerup.bfxrsound  damage.bfxrsound  fire.bfxrsound  health.bfxrsound  hit.bfxrsound
bevy_kako_tools/: Cargo.toml
bevy_kako_tools/src/: aabb.rs  lib.rs  resources.rs
src/: animations.rs  background.rs  camera.rs  explosion.rs  frame_counter.rs  main.rs  placeholder.rs  player.rs  player_bullet.rs  player_local.rs  player_original.rs  stage.rs  trail.rs
src/enemies/: enemy1.rs  enemy2.rs  enemy3.rs  enemy_bullet1.rs  mod.rs
src/powerups/: bullet_speed_up.rs  dash_speed_up.rs  fire_rate_up.rs  health_up.rs  max_dash_up.rs  max_health_up.rs  mod.rs
src/status/: mod.rs
