[package]
name = "bevynator"
version = "0.1.0"
authors = ["kakoeimon <kakoeimon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = "0.1.3"
#bevy = {path = "../bevy_fix"}
bevy = {git = "https://github.com/bevyengine/bevy"}
bevy_kako_tools = {path = "./bevy_kako_tools"}
rand = "0.7"
